Fix footer styles and top link on mobile.

--- a/source/stylesheets/application/_layout.sass
+++ b/source/stylesheets/application/_layout.sass
@@ -36,10 +36,16 @@
   h1
     margin-top: 1em
 
+.menu + hr
+  margin-bottom: 0
+
 #main > footer
   +clearfix
   color: lighten($text-color, 25%)
   padding: 10px 15px
+
+  .copyright
+    float: left
 
   span
     display: none
